# controller/user.js
@@ -1,10 +1,10 @@
 const mongodb = require('../data/database');
 const ObjectId = require('mongodb').ObjectId;
-const bcrypt = require('bcrypt');
 
 const getAll = async (req, res) => {
     //#swagger.tags=["Users"]
     //#swagger.summary = Get all users 
+    //#swagger.security = [{ "githubOAuth": ["user:email"] }]
     //#swagger.responses[200] Lists all users - schema => _id, role, name, email, username, password
     try {
         const user = await mongodb.getDatabase().db('lucky7Travel').collection('user').find().toArray();
@@ -19,6 +19,7 @@ const getAll = async (req, res) => {
 const getSingleUser = async (req, res) => {
     //#swagger.tags=["Users"]
     //#swagger.summary = get a single user - must know the _id
+    //#swagger.security = [{ "githubOAuth": ["user:email"] }]
     //#swagger.responses[200] - lists the one user  schema =>  _id, username, name, email, role, password
     try {
         if (!ObjectId.isValid(req.params.id)) {
@@ -37,9 +38,10 @@ const getSingleUser = async (req, res) => {
     }
 };
 
-const createUser = async (req, res) => {
+/*const createUser = async (req, res) => {
     //#swagger.tags=["Users"]
     //#swagger.summary = creates user and add to database 
+    //#swagger.security = [{ "githubOAuth": ["user:email"] }]
     //#swagger.responses[204]
     try {
         const hashedPassword = await bcrypt.hash(req.body.password, 10);
@@ -51,7 +53,7 @@ const createUser = async (req, res) => {
             password: hashedPassword
         };
         const response = await mongodb.getDatabase().db('lucky7Travel').collection("user").insertOne(user);
-        
+    
         if (response.acknowledged) {
             return res.status(201).json({ message: "User Created", id: response.insertedId });
         }
@@ -60,10 +62,11 @@ const createUser = async (req, res) => {
         res.status(500).json({ message: "User creation failed" });
     }
 };
-
+*/
 const updateUser = async (req, res) => {
     //#swagger.tags=["Users"]
     //#swagger.summary = updates user
+    //#swagger.security = [{ "githubOAuth": ["user:email"] }]
     //#swagger.responses[204]
     try {
         if (!ObjectId.isValid(req.params.id)) {
@@ -80,7 +83,7 @@ const updateUser = async (req, res) => {
             password: hashedPassword
         };
 
-        const response = await mongodb.getDatabase().db('lucky7Travel').collection("user").replaceOne({ _id: userId }, user);
+        const response = await mongodb.getDatabase().db('lucky7Travel').collection("user").updateOne({ _id: userId }, { $set: user });
         if (response.matchedCount === 0) {
             return res.status(404).json({ message: "User not found" });
         }
@@ -90,7 +93,7 @@ const updateUser = async (req, res) => {
         }
 
         return res.status(204).send();
-} catch (error) {
+    } catch (error) {
         res.status(500).json({ message: "Error updating user", error });
     }
 };
@@ -98,6 +101,7 @@ const updateUser = async (req, res) => {
 const deleteUser = async (req, res) => {
     //#swagger.tags=["Users"]
     //#swagger.summary = delete user 
+    //#swagger.security = [{ "githubOAuth": ["user:email"] }]
     //#swagger.responses[204]
     try {
         if (!ObjectId.isValid(req.params.id)) {
@@ -111,7 +115,8 @@ const deleteUser = async (req, res) => {
         res.status(404).json({ message: "User not found" });
     } catch (error) {
         res.status(500).json({ message: "Some error occurred while deleting the user." });
-        }
+    }
 };
 
-module.exports = { getAll, getSingleUser, createUser, updateUser, deleteUser};
+
+module.exports = { getAll, getSingleUser, /*createUser,*/ updateUser, deleteUser }
