# swagger-output.json
@@ -38,55 +38,38 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "githubOAuth": [
+              "user:email"
+            ]
+          }
+        ]
+      }
+    },
+    "/user/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
-      },
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "creates user and add to database",
+      }
+    },
+    "/user/logout": {
+      "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "username": {
-                  "example": "any"
-                },
-                "name": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "role": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "default": {
+            "description": ""
           }
         }
       }
@@ -116,13 +99,23 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "githubOAuth": [
+              "user:email"
+            ]
+          }
+        ]
       },
       "put": {
         "tags": [
@@ -143,6 +136,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "password": {
+                  "example": "any"
+                },
                 "username": {
                   "example": "any"
                 },
@@ -153,9 +149,6 @@
                   "example": "any"
                 },
                 "role": {
-                  "example": "any"
-                },
-                "password": {
                   "example": "any"
                 }
               }
@@ -172,13 +165,23 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "githubOAuth": [
+              "user:email"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -201,13 +204,23 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "githubOAuth": [
+              "user:email"
+            ]
+          }
+        ]
       }
     },
     "/destination/": {
@@ -870,5 +883,28 @@
         }
       }
     }
-  }
+  },
+  "components": {
+    "securitySchemes": {
+      "githubOAuth": {
+        "type": "oauth2",
+        "flows": {
+          "authorizationCode": {
+            "authorizationUrl": "https://github.com/login/oauth/authorize",
+            "tokenUrl": "https://github.com/login/oauth/access_token",
+            "scopes": {
+              "user:email": "Access user email"
+            }
+          }
+        }
+      }
+    }
+  },
+  "security": [
+    {
+      "githubOAuth": [
+        "user:email"
+      ]
+    }
+  ]
 }
